# cyrus-sasl

./: .cvsignore  .gitignore  .indent.pro  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  NTMakefile  README  README.andrew  README.md  README.release  README.rpm  SMakefile  TODO  acconfig.h  appveyor.yml  configure.ac  configure.in  libsasl2.pc.in  testing.txt
cmulocal/: c-attribute.m4  sasl2.m4  sasldb.m4
common/: Makefile.am  crypto-compat.c  crypto-compat.h  plugin_common.c  plugin_common.h
config/: Info.plist  cyrus-sasl.spec  kerberos_v4.m4  ltconfig  ltmain.sh  mkinstalldirs  plain.m4  sasl.spec  sasldb.m4
contrib/: change-sasldb2-realm.py  opie-2.4-fixes  saslauthd-unix.pl  stripplus_canonuser.patch
dlcompat-20010505/: Makefile  dlopen.c
doc/: Makefile  Makefile.am  Makefile.in  TODO  appconvert.html  components.html  draft-burdis-cat-srp-sasl-05.txt  draft-ietf-cat-sasl-gssapi-05.txt  draft-ietf-sasl-anon-00.txt  draft-ietf-sasl-anon-01.txt  draft-ietf-sasl-plain-00.txt  draft-ietf-sasl-plain-01.txt  draft-ietf-sasl-rfc2222bis-00.txt  draft-ietf-sasl-rfc2222bis-01.txt  draft-ietf-sasl-rfc2831bis-00.txt  draft-ietf-sasl-rfc2831bis-01.txt  draft-leach-digest-sasl-01.txt  draft-leach-digest-sasl-02.txt  draft-leach-digest-sasl-03.txt  draft-melnikov-rfc2831bis-00.txt  draft-melnikov-rfc2831bis-01.txt  draft-melnikov-rfc2831bis-02.txt  draft-myers-saslrev-01.txt  draft-myers-saslrev-02.txt  draft-nerenberg-sasl-crammd5-00.txt  draft-nerenberg-sasl-crammd5-01.txt  draft-nerenberg-sasl-crammd5-02.txt  draft-nerenberg-sasl-crammd5-03.txt  draft-newman-auth-scram-03.txt  draft-newman-sasl-anon-00.txt  draft-newman-sasl-c-api-00.txt  draft-sasl-login.txt  draft-zeilenga-sasl-anon-00.txt  draft-zeilenga-sasl-anon-01.txt  draft-zeilenga-sasl-plain-00.txt  draft-zeilenga-sasl-plain-01.txt  gssapi.html  htpasswd.md  index.html  install.html  (+10 more)
doc/legacy/: Makefile.am  NTMakefile  TODO  advanced.html  components.html  index.html  install.html  mechanisms.html  options.html  os390.html  plugprog.html  programming.html  readme.html  sysadmin.html  testing.txt
docsrc/: Makefile  conf.py  contribute.rst  developers.rst  download.rst  index.rst
include/: .cvsignore  .gitignore  Makefile.am  NTMakefile  gai.h  hmac-md5.h  makemd5.c  md5.h  prop.h  sasl.h  (+3 more)
java/: Makefile.am  README  javasasl.c
java/CyrusSasl/: .cvsignore  ClientFactory.java  GenericClient.java  GenericCommon.java  GenericServer.java  Makefile.am  Sasl.java  SaslException.java  SaslInputStream.java  SaslOutputStream.java  javasasl.c
java/Test/: jimtest.java
java/javax/security/auth/: .cvsignore
java/javax/security/auth/callback/: .cvsignore
lib/: .gitignore  Makefile.am  NTMakefile  auxprop.c  canonusr.c  checkpw.c  client.c  common.c  config.c  db_berkeley.c  db_gdbm.c  db_ndbm.c  db_none.c  db_testw32.c  dlopen.c  external.c  getaddrinfo.c  getnameinfo.c  getsubopt.c  imtest.c  libsasl2.map  makedbm.c  md5.c  saslint.h  saslutil.c  server.c  seterror.c  smtptest.c  snprintf.c  staticopen.c  staticopen.h  test-client.c  test-common.c  test-common.h  test-server.c  test.c  windlopen.c
lib/test/: smtptest.c  test-client.c  test-common.c  test-common.h  test-server.c  test.c
man/: Makefile.am  sasl.3  sasl_authorize_t.3  sasl_auxprop.3  sasl_auxprop_getctx.3  sasl_auxprop_request.3  sasl_callbacks.3  sasl_canon_user_t.3  sasl_checkapop.3  sasl_checkpass.3  sasl_client.1  sasl_client_init.1  sasl_client_init.3  sasl_client_new.1  sasl_client_new.3  sasl_client_start.3  sasl_client_step.3  sasl_decode.3  sasl_dispose.3  sasl_done.3  sasl_encode.3  sasl_encodev.3  sasl_errdetail.3  sasl_errors.3  sasl_errstring.1  sasl_errstring.3  sasl_getconfpath_t.3  sasl_getopt_t.3  sasl_getpath_t.3  sasl_getprop.3  sasl_getsecret_t.1  sasl_getsecret_t.3  sasl_getsimple_t.1  sasl_getsimple_t.3  sasl_global_listmech.3  sasl_idle.3  sasl_listmech.3  sasl_log_t.3  sasl_server.1  sasl_server_init.3  (+10 more)
man/legacy/: sasl_listmech.3  sasl_server_userdb_setpass_t.3
plugins/: .gitignore  Makefile.am  NTMakefile  anonymous.c  cram.c  crypto_kdf_hkdf_sha512.h  digestmd5.c  gs2.c  gs2_token.c  gs2_token.h  gssapi.c  kdf_hkdf_sha512.c  kerberos4.c  ldapdb.c  login.c  makeinit.sh  mysql.c  ntlm.c  opaque.c  opaque.h  opaque_impl.c  otp.c  otp.h  passdss.c  plain.c  plugin_common.c  plugin_common.h  rc4.c  sasldb.c  scram.c  securid.c  sql.c  srp.c
sasl/: BadAuthException.java  ClientAuthIDCB.java  ClientAuthIDPasswordCB.java  ClientCB.java  ClientConn.java  ClientEchoCB.java  ClientFactory.java  ClientLogCB.java  ClientNoEchoCB.java  ClientPasswordCB.java  ClientUserIDAuthIDPasswordCB.java  ClientUserIDCB.java  ClientUserIDPasswordCB.java  CommonConn.java  GenericException.java  InteractException.java  Makefile.am  NoMechException.java  NotDoneException.java  ServerConn.java  ServerFactory.java  Utils.java  javasasl.c  saslClientConn.java  saslClientFactory.java  saslCommonConn.java  saslCommonConnection.java  saslException.java  saslFilterInputStream.java  saslFilterOutputStream.java  saslMechList.java  saslPrompt.java  saslServerConn.java  saslServerFactory.java  saslUtils.java
saslauthd/: .cvsignore  .gitignore  AUTHORS  LDAP_SASLAUTHD  Makefile.am  Makefile.in  README.cache  acconfig.h  auth_dce.c  auth_dce.h  auth_getpwent.c  auth_getpwent.h  auth_htpasswd.c  auth_htpasswd.h  auth_httpform.c  auth_krb4.c  auth_krb4.h  auth_krb5.c  auth_krb5.h  auth_ldap.c  auth_ldap.h  auth_pam.c  auth_pam.h  auth_rimap.c  auth_rimap.h  auth_sasldb.c  auth_shadow.c  auth_shadow.h  auth_sia.c  auth_sia.h  cache.c  cache.h  cfile.c  configure.ac  configure.in  getaddrinfo.c  getnameinfo.c  globals.h  ipc_doors.c  ipc_unix.c  (+18 more)
saslauthd/config/: ltconfig  ltmain.sh  mkinstalldirs
saslauthd/include/: gai.h
utils/: .cvsignore  .gitignore  Makefile  Makefile.am  NTMakefile  dbconverter-1.5.5.c  dbconverter-1.5.9.c  dbconverter-2.c  dbconverter.c  imtest.c  pluginviewer.c  sasldbconverter2.8  sasldblistusers.8  sasldblistusers.c  saslpasswd.8  saslpasswd.c  saslpasswd2.8  sfsasl.c  sfsasl.h  smtptest.c  testsuite.c
(+162 files in other folders)
